enhance: base62 encoder algorithm implemented

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,10 @@
 server:
   port: :9090
+  machine_id: 1
+  domain: https://tiny.co/
 ignite:
-  host: "localhost"
+  host: "f6f0609b-72ac-4a26-83c6-f9d74929e986.gridgain-nebula.com"
   port: 10800
-  username: "ignite"
-  password: "ignite"
-  tls: false
+  username: "gurbaj"
+  password: "D2ZRHnQIUeQEc9D"
+  tls: true
